Fixed formatting and layout of App.tsx webapp.

--- a/src/main/java/com/OneOT/webapp/1ot-app/src/App.css
+++ b/src/main/java/com/OneOT/webapp/1ot-app/src/App.css
@@ -1,3 +1,35 @@
-.App {
-  background-color: #d8e1f2;
+header, body {
+    background: whitesmoke;
+}
+
+footer {
+    background: deepskyblue;
+}
+
+.tempTagMax, .tempValueMax, .tempTagMin, .tempValueMin ,.phenomenonText{
+    text-align: center;
+}
+
+.phenomenonText {
+    font-size: larger;
+}
+
+.tempValueMin,.tempValueMax {
+    font-size: large;
+}
+
+.dayTime {
+    text-align: center;
+}
+
+.temperatureColMax, .temperatureColMin{
+    margin: 10px;
+}
+
+.temperatureColMax {
+    outline: #ffda94 thick groove;
+}
+
+.temperatureColMin {
+    outline: #d9fffa thick groove;
 }
